// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArgyleModalAdapter > event:other > logs ApplicantAccessedArgyleModalMFAScreen Event 1`] = `
{
  "name": "mfa - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantAttemptedArgyleLogin Event 1`] = `
{
  "name": "login - form submitted",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantClickedArgyleLoginHelp for login help clicked event 1`] = `
{
  "name": "login - login help clicked",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantClosedArgyleLinkFromErrorScreen for link closed event 1`] = `
{
  "name": "link closed",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantDisconnectedArgyleAccount for account status disconnected event 1`] = `
{
  "name": "account status - disconnected",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAccountIssueError for account error with account issue code 1`] = `
{
  "connectionErrorCode": "account_not_found",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "account_not_found",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for account error with auth error code 1`] = `
{
  "connectionErrorCode": "invalid_credentials",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "invalid_credentials",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with auth_required error 1`] = `
{
  "errorCode": "auth_required",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "auth_required",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with expired_credentials error 1`] = `
{
  "errorCode": "expired_credentials",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "expired_credentials",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with invalid_auth error 1`] = `
{
  "errorCode": "invalid_auth",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "invalid_auth",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleAuthenticationError for login with invalid_credentials error 1`] = `
{
  "errorCode": "invalid_credentials",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "invalid_credentials",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleCredentialError for account error with credential error code 1`] = `
{
  "connectionErrorCode": "invalid_employer_identifier",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "invalid_employer_identifier",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleLimitError for account error with limit error code 1`] = `
{
  "connectionErrorCode": "login_attempts_exceeded",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "login_attempts_exceeded",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaError for account error with MFA error code 1`] = `
{
  "connectionErrorCode": "mfa_timeout",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "mfa_timeout",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleMfaError for login with mfa_cancelled error 1`] = `
{
  "errorCode": "mfa_cancelled_by_the_user",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "mfa_cancelled_by_the_user",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgylePlatformError for account error with platform error code 1`] = `
{
  "connectionErrorCode": "platform_unavailable",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "platform_unavailable",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgylePlatformError for login with connection_unavailable error 1`] = `
{
  "errorCode": "connection_unavailable",
  "errorMessage": undefined,
  "payload": {
    "name": "login - opened",
    "properties": {
      "errorCode": "connection_unavailable",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for account error with no error code 1`] = `
{
  "connectionErrorCode": undefined,
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for account error with system error code 1`] = `
{
  "connectionErrorCode": "system_error",
  "connectionStatus": "error",
  "payload": {
    "name": "account error - opened",
    "properties": {
      "connectionErrorCode": "system_error",
      "connectionStatus": "error",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredArgyleSystemError for error opened event 1`] = `
{
  "errorType": "invalid_user_token",
  "payload": {
    "name": "error - opened",
    "properties": {
      "errorType": "invalid_user_token",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantEncounteredUnknownArgyleEvent for unknown events 1`] = `
{
  "event_name": "some-future-event",
  "payload": {
    "name": "some-future-event",
    "properties": {
      "someNewProperty": "value",
      "userId": "test-user-id",
    },
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantUpdatedArgyleSearchTerm Event 1`] = `
{
  "payload": {
    "name": "search - term updated",
    "properties": {
      "tab": "tab",
      "term": "search term",
    },
    "tab": "tab",
    "term": "search term",
  },
  "tab": "tab",
  "term": "search term",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleAccountStatus for account status opened event 1`] = `
{
  "name": "account status - opened",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleDefaultProviderSearch Event 1`] = `
{
  "name": "search - opened",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleLoginPage Event 1`] = `
{
  "name": "login - opened",
  "properties": {},
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleProviderConfirmation Event 1`] = `
{
  "name": "search - link item selected",
}
`;

exports[`ArgyleModalAdapter > event:other > logs ApplicantViewedArgyleSuccessScreen for success opened event 1`] = `
{
  "name": "success - opened",
  "properties": {
    "userId": "test-user-id",
  },
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountCreated Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountError Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > event:other > logs onAccountRemoved Event 1`] = `
{
  "accountId": "account-id",
  "platformId": "platform-id",
}
`;

exports[`ArgyleModalAdapter > open > calls track user action 1`] = `
[
  "ApplicantSelectedEmployerOrPlatformItem",
  {
    "is_default_option": true,
    "item_id": "id",
    "item_name": "test-name",
    "item_type": "response-type",
    "locale": "en",
    "provider_name": "pinwheel",
  },
]
`;
